Fix: make spacing for body, header, and footer consistent

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -19,6 +19,11 @@ html {
 }
 
 body {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 48px 0px 0px 0px;
   width: 768px;
 
   @include media(">phone", "<=desktop") {
@@ -45,4 +50,8 @@ h6 {
 
 a {
   font-family: typography.$interface-font-stack;
+}
+
+#main-content {
+  margin-bottom: 24px;
 }
