--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   border: 0px solid black;
+  width: 100%;
 
   @include media(">phone", "<=desktop") {
     flex-flow: column nowrap;
