--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -6,7 +6,6 @@
 
 #home-page h2 {
   font-family: typography.$interface-font-stack;
-  margin: 48px 0px 32px 0px;
   font-size: 2em;
   font-weight: 300;
 }
@@ -18,7 +17,6 @@
   justify-content: center;
   gap: 16px;
   list-style: none;
-  margin: 0px 0px 48px 0px;
   padding: 0;
   font-size: 16px;
 }
