--- a/assets/sass/pages/_posts.scss
+++ b/assets/sass/pages/_posts.scss
@@ -3,7 +3,6 @@
   flex-flow: column nowrap;
   align-items: flex-start;
   gap: 16px;
-  margin: 0px 0px 24px 0px;
   padding: 0;
   list-style: none;
 }
